--- a/wstyle.css
+++ b/wstyle.css
@@ -1,12 +1,35 @@
+body{
+margin: 0;
+padding: 0;
+background-image: url("background.jpg");
+background-attachment: fixed;
+background-size:cover;
+font-family: Century Gothic;
+font-size:20px;
+line-height:25px;
+
+
+}
+
+.content {
+
+	font-family:Century Gothic;
+	font-weight:bold;
+	color:black;
+	text-align:center;
+
+}
+
 header {
 	background:rgba(0,0,0,.65);
 	font-family:Century Gothic;
 	font-weight:bold;
 	color:white;
 	text-align: center;
+
 }
 
-header img{
+header img {
 	height: 1.7em;
 }
 
@@ -16,12 +39,29 @@ header h1{
 	padding: 35px;
 }
 
-.content h2 {
-	font-family:Century Gothic;
-	font-weight:bold;
-	color:black;
-	text-align:center;
+
+.container {
+    display: flex;
 }
+
+
+.left {
+  display: table-cell;
+  width: 70%;
+  float:left;
+	background:rgba(0,0,0,.05);
+	border-right: 4px dashed rgba(0,0,0,.50);
+	height: auto;
+}
+
+.right{
+  display: table-cell;
+	background:rgba(0,0,0,.05);
+  width: 30%;
+	height: auto;
+	text-align: center;
+}
+
 
 p {
 	font-family:Century Gothic;
@@ -30,12 +70,20 @@ p {
 	text-align: left;
 	padding-left: 160px;
 	padding-right: 160px;
- 
+}
+
+section p {
+	font-family:Century Gothic;
+	font-weight:bold;
+	color:black;
+	text-align: left;
+	padding-left: 120px;
+	padding-right: 120px;
 }
 
 footer {
    box-sizing: border-box;
-   
+
    bottom:0;
    width:100%;
    line-height: 25px;
@@ -50,5 +98,81 @@ footer {
 
    padding-right: 100px;
    padding-left: 100px;
-	
+
+}
+
+table {
+    font-family:sans-serif;
+    border-collapse: collapse;
+    width: 500px; ;
+
+}
+
+td, th {
+    border: 3px solid #000000;
+    text-align: center;
+    padding: 8px;
+		font-weight:bold;
+		font-size: 18px;
+}
+
+tr:nth-child(even) {
+    background-color: #FFFACD;
+}
+
+#tableborder{
+border-bottom: none;
+border-left: none;
+border-right: none;
+}
+.row {
+    display: flex;
+		padding-left: 100px;
+		padding-right: 100px;
+		margin: 45px 0;
+
+}
+
+.column {
+		box-sizing: border-box;
+    flex: 10%;
+		width:130px;
+		height: 230px;
+
+}
+
+.column img{
+border:1px solid #021a40;
+		width:130px;
+		height: 170px;
+		border-radius: 15px;
+}
+
+figure{
+float:left;
+padding-left: 85px;
+padding-right: : 85px;
+}
+
+.foto img{
+	float: left;
+	border-radius: 15px;
+ width:570;
+ height:430;
+border:1px solid #021a40;
+
+}
+
+iframe{
+border-radius: 15px;
+ width:420;
+ height:315;
+border:1px solid #021a40;
+	}
+
+
+	@media screen and (max-width:500px) {
+  .left, .container, .right {
+    width:100%;
+  }
 }
