--- a/nav.css
+++ b/nav.css
@@ -3,8 +3,14 @@ width:100%;
 background:rgba(0,0,0,.50);
 }
 
+@media screen and (max-width:500px) {
+nav{
+	width:100%;
+}
+}
+
 nav ul{
-	
+
 padding:0;
 margin:0;
 list-style:none;
